[project]
name = "l0-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "orjson>=3.9.0",
    "typing-extensions>=4.9.0",
    "uuid6>=2024.1.12",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
litellm = ["litellm>=1.40"]

observability = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-httpx>=0.45",
    "sentry-sdk>=1.40",
]

structured = [
    "jsonschema>=4.19",
    "json-repair>=0.25",
    "msgspec>=0.18.4",
]

speed = [
    "uvloop>=0.19; platform_system!='Windows'",
]

dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "respx",
    "coverage",
    "ruff",
    "mypy",
]
